socials in team section added

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                   ./images/services/services1-desktop-740.webp 740w,
                   ./images/services/services1-desktop-1110.webp 1110w
                   "
-                  type="image/webp">
+                  type="image/webp"
+                  sizes="(min-width: 1200px) 370px">
 
                 <source
                   srcset="
@@ -198,12 +199,12 @@
                   ./images/services/services1-desktop-740.jpg 740w,
                   ./images/services/services1-desktop-1110.jpg 1110w
                   "
-                  type="image/jpeg">
+                  type="image/jpeg"
+                  sizes="(min-width: 1200px) 370px">
 
                 <img
                   src="./images/services/services1-desktop-370.jpg"
-                  alt="Разработка эффектвных решений с нуля"
-                  width="370px">
+                  alt="Разработка эффектвных решений с нуля">
               </picture>
             </div>
 
@@ -222,7 +223,8 @@
                   ./images/services/services2-desktop-740.webp 740w,
                   ./images/services/services2-desktop-1110.webp 1110w
                   "
-                  type="image/webp">
+                  type="image/webp"
+                  sizes="(min-width: 1200px) 370px">
 
                 <source
                   srcset="
@@ -230,12 +232,12 @@
                   ./images/services/services2-desktop-740.jpg 740w,
                   ./images/services/services2-desktop-1110.jpg 1110w
                   "
-                  type="image/jpeg">
+                  type="image/jpeg"
+                  sizes="(min-width: 1200px) 370px">
 
                 <img
                   src="./images/services/services2-desktop-370.jpg"
-                  alt="Создание мобильных приложений"
-                  width="370px">
+                  alt="Создание мобильных приложений">
               </picture>
             </div>
 
@@ -254,19 +256,20 @@
                   ./images/services/services3-desktop-740.webp 740w,
                   ./images/services/services3-desktop-1110.webp 1110w
                   "
-                  type="image/webp">
+                  type="image/webp"
+                  sizes="(min-width: 1200px) 370px">
                 <source
                   srcset="
                   ./images/services/services3-desktop-370.jpg 370w,
                   ./images/services/services3-desktop-740.jpg 740w,
                   ./images/services/services3-desktop-1110.jpg 1110w
                   "
-                  type="image/jpeg">
+                  type="image/jpeg"
+                  sizes="(min-width: 1200px) 370px">
 
                 <img
                   src="./images/services/services3-desktop-370.jpg"
-                  alt="Дизайнерские решения"
-                  width="370px">
+                  alt="Дизайнерские решения">
               </picture>
             </div>
 
@@ -334,28 +337,28 @@
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Instagram button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-instagram"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Twitter Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-twitter"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Facebook Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-facebook"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="LinkedIn Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-linkedin"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -412,28 +415,28 @@
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Instagram button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-instagram"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Twitter Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-twitter"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Facebook Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-facebook"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="LinkedIn Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-linkedin"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -489,28 +492,28 @@
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Instagram button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-instagram"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Twitter Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-twitter"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Facebook Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-facebook"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="LinkedIn Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-linkedin"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -568,28 +571,28 @@
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Instagram button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-instagram"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Twitter Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-twitter"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="Facebook Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-facebook"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="" class="socials__link link">
                     <svg class="socials__icon" width="20" height="20" aria-label="LinkedIn Button">
-                      <use href="./images/icons/symbol-defs.svg#icon-socials-linkedin"></use>
+                      <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                     </svg>
                   </a>
                 </li>
