--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 ./images/team/teammate1-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
               <!-- jpg -->
               <source
                 srcset="
@@ -322,7 +322,7 @@
                 ./images/team/teammate1-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
 
               <img
                 src="./images/team/teammate1-mobile-450.jpg"
@@ -385,7 +385,7 @@
                 ./images/team/teammate2-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
               <!-- jpg -->
               <source
                 srcset="
@@ -400,7 +400,7 @@
                 ./images/team/teammate2-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
 
               <img
                 src="./images/team/teammate2-mobile-450.jpg"
@@ -462,7 +462,7 @@
                 ./images/team/teammate3-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
               <!-- jpg -->
               <source
                 srcset="
@@ -477,7 +477,7 @@
                 ./images/team/teammate3-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
 
               <img
                 src="./images/team/teammate3-mobile-450.jpg"
@@ -540,7 +540,7 @@
                 ./images/team/teammate4-mobile-1350.webp 1350w
                 "
                 type="image/webp"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
               <!-- jpg -->
               <source
                 srcset="
@@ -555,7 +555,7 @@
                 ./images/team/teammate4-mobile-1350.jpg 1350w
                 "
                 type="image/jpeg"
-                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px">
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (max-width:767.98px) 450px, (max-width:479.98px) 280px">
 
               <img
                 src="./images/team/teammate4-mobile-450.jpg"
@@ -605,8 +605,156 @@
       </div>
     </section>
     <!-- /team section -->
+
+    <!-- clients section -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section__title">Постоянные клиенты</h2>
+
+        <ul class="clients list">
+          <!-- 1st item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client1"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- 2nd item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client2"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- 3rd item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client3"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- 4th item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client4"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- 5th item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client5"></use>
+              </svg>
+            </a>
+          </li>
+          <!-- 6th item -->
+          <li class="clients__item">
+            <a class="clients__link link" href="">
+              <svg class="clients__icon" width="106" height="60">
+                <use href="./images/icons/symbol-defs.svg#icon-client6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+    <!-- /clients section -->
+
   </main>
   <!-- /main -->
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="container footer__container">
+
+      <!-- address -->
+      <div class="footer__address">
+
+        <a class="logo footer__logo link" href="./index.html">
+          Web<span class="logo--light">Studio</span>
+        </a>
+
+        <address>
+          <ul class="address list">
+            <li class="address__item">
+              <a class="address__link address__link--light link" href=" https://goo.gl/maps/Z7eTmiZsE94p95589" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
+            <li class="address__item">
+              <a class="address__link link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="address__item">
+              <a class="address__link link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+      <!-- /address -->
+      <!-- footer socials -->
+      <div class="footer__socials">
+        <b class="footer__subtitle">Присоединяйтесь</b>
+
+        <ul class="socials list">
+          <li class="socials__item">
+            <a href="" class="socials__link socials__link--dark link">
+              <svg class="socials__icon socials__icon--light" width="20" height="20" aria-label="Instagram button">
+                <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a href="" class="socials__link socials__link--dark link">
+              <svg class="socials__icon socials__icon--light" width="20" height="20" aria-label="Twitter Button">
+                <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a href="" class="socials__link socials__link--dark link">
+              <svg class="socials__icon socials__icon--light" width="20" height="20" aria-label="Facebook Button">
+                <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a href="" class="socials__link socials__link--dark link">
+              <svg class="socials__icon socials__icon--light" width="20" height="20" aria-label="LinkedIn Button">
+                <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- /footer socials -->
+      <!-- subscription form -->
+      <div class="footer__subscription">
+        <b class="footer__subtitle">Подпишитесь на рассылку</b>
+
+        <form class="subscription-form">
+          <label>
+            <input class="subscription-form__input" type="email" name="email" placeholder="Email">
+          </label>
+          <button class="subscription-form__btn btn" type="submit">
+            <span class="subscription-form__btn-name">Подписаться</span>
+            <svg class="subscription-form__btn-icon" width="24" height="24">
+              <use href="./images/icons/symbol-defs.svg#icon-subscribe"></use>
+            </svg>
+          </button>
+        </form>
+
+      </div>
+      <!-- /subscription form -->
+
+    </div>
+  </footer>
+  <!-- /footer -->
+
 
   <!-- scripts -->
   <script src="./js/modal.js"></script>
